# pr_pro_programs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/pr3/: visualization.py
src/pr3/abah/: program.py  streamlit_app.py  w1.py  w2.py  w3.py  w4.py  w5.py  w6.py  w7.py  w8.py
src/pr3/hypertrophy/: exercises.py  program.py  streamlit_app.py  w1.py  w2.py  w3.py  w4.py  w5.py  w6.py  w7.py  w8.py
src/pr3/hypertrophy_alt/: exercises.py  program.py  w1.py  w2.py  w3.py  w4.py  w5.py
src/pr3/weightlifting_3_days/: exercises.py  program.py  streamlit_app.py  w1.py  w2.py  w3.py
src/pr3/weightlifting_3_days/.streamlit/: config.toml
src/pr_pro_programs/: __init__.py
src/pr_pro_programs/abah/: exercises.py  program.py  streamlit_app.py  w1.py  w2.py  w3.py  w4.py  w5.py  w6.py  w7.py  w8.py
