[project]
name = "pr3"
version = "0.1.0"
description = "Collection of programs for the pr-pro package."
readme = "README.md"
authors = [
    { name = "Roland Stolz", email = "roland.stolz9@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pr-pro[vis]",
]

[tool.uv.sources]
pr-pro = { git = "https://github.com/RolandStolz/pr_pro.git", branch = "main" }

[project.scripts]
abah = "pr3.abah.streamlit_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
indent-width = 4
format.quote-style = "single"
target-version = "py313"
lint.ignore = ["F405", "F403"]

[tool.pyright]
reportWildcardImportFromLibrary = false
reportUnusedImport = "warning"
typeCheckingMode = "standard"
